vlib/v/checker/tests/ctdefine.out
vlib/v/checker/tests/ctdefine.vv:4:1: error: only functions that do NOT return values can have `[if test]` tags
    2 |
    3 | [if test]
    4 | fn only_called_in_test() string {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    5 |     return 'bah'
    6 | }
vlib/v/checker/tests/ctdefine.vv:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module notmain
      | ^
    2 |
    3 | [if test]
