vlib/v/checker/tests/ctdefine.vv
module notmain

[if test]
fn only_called_in_test() string {
	return 'bah'
}
